--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-<title>桝井晃基's HomePage</title>
+<head>
+    <title>桝井晃基's HomePage</title>
+</head>
 
-<body>
-    <h1>あああ</h1>
-</body>
+        <body>
+            <h1>あああ</h1>
+        </body>
 
-<body>
-    <h1>いいい</h1>
-</body>
+        <body>
+            <h1>いいい</h1>
+        </body>
 
-<img src="img/github-template.png"
-     width="210" height="88">
-<br>
-<br>
+        <img src="img/github-template.png"
+             width="210" height="88">
+        <br>
+        <br>
 
 </html>
