--- a/index.html
+++ b/index.html
@@ -5,17 +5,282 @@
     <title>桝井晃基's HomePage</title>
 </head>
 
+<body background="img/back.JPG">
+
+    <center>
         <body>
-            <h1>あああ</h1>
+            <h1>桝井 晃基(ますい こうき)</h1>
         </body>
 
-        <body>
-            <h1>いいい</h1>
-        </body>
 
-        <img src="img/github-template.png"
-             width="210" height="88">
-        <br>
-        <br>
+
+
+        <div style="display:inline-block; padding: 10px; margin-bottom: 10px; border: 1px dashed #333333; background-color: #ffffe0;">
+
+
+
+            <table width="1000">
+                <tr>
+                    <td>
+                        <body>
+                            <h1>　自己紹介　　　                    </h1>
+                        </body>
+                    </td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td rowspan="10">　<img src="img/github-template.png" width="400" height="300"></td>
+                </tr>
+
+                <tr><td><li>所属</li></td></tr>
+                <tr><td>　名古屋大学大学院　情報学研究科　情報システム学専攻</td></tr>
+                <tr><td><li>所属学会</li></td></tr>
+                <tr><td>　情報処理学会(学生員)</td></tr>
+                <tr><td><li>肩書き</li></td></tr>
+                <tr><td>　日本学術振興会　特別研究員(DC2)</td></tr>
+                <tr><td>　</td></tr>
+                <tr><td>　</td></tr>
+                <tr><td>　</td></tr>
+
+                </tr>
+
+            </table>
+            <hr width="1000">
+
+            <table width="1000">
+                <tr>
+                    <td>
+                        <body>
+                            <h1>　経歴　　　                    </h1>
+                        </body>
+                    </td>
+
+                <tr><td>2008年3月　　岐阜県美濃市立美濃北中学校卒業※　　　　　　　　　　　　　　　　　　　　　　　　　　　※少子化により現在は廃校</td></tr>
+                <tr><td>2011年3月　　岐阜県立関高等学校卒業</td></tr>
+                <tr><td>2015年3月　　名古屋大学　工学部　電気電子・情報工学科卒業</td></tr>
+                <tr><td>2017年3月　　名古屋大学大学院　情報科学研究科　情報システム学専攻博士前期課程修了</td></tr>
+                <tr><td>2017年4月～　名古屋大学大学院　情報学研究科　情報システム学専攻博士後期課程在学中</td></tr>
+            </table>
+
+            <br><br>
+
+            <table width="1000">
+                <tr>
+                    <td>
+                        <body>
+                            <h1>　趣味　　　                    </h1>
+                        </body>
+                    </td>
+
+                    </td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td>　</td>
+                    <td rowspan="10">　<img src="img/github-template.png" width="400" height="300"></td>
+                </tr>
+
+                <tr><td><li>スポーツ</li></td></tr>
+                <tr><td>　球技全般　田舎っ子だったので走るのが好き</td></tr>
+                <tr><td><li>ゲーム</li></td></tr>
+                <tr><td>　音楽ゲーム　ぷよぷよ・テトリス　その他いろいろ</td></tr>
+                <tr><td><li>クイズ</li></td></tr>
+                <tr><td>　最近になって歴史とかを学ぶ楽しみを覚えた</td></tr>
+                <tr><td>　</td></tr>
+                <tr><td>　</td></tr>
+                <tr><td>　</td></tr>
+
+                </tr>
+
+            </table>
+
+
+            <table width="1000">
+                <tr>
+                    <td>
+                        <body>
+                            <h1>　研究・業績について　　　                    </h1>
+                        </body>
+                    </td>
+                </tr>
+
+                <tr><td><b>内容</b></td></tr>
+                <tr><td><li>大規模電磁場解析問題における高精度演算を用いた反復法に関する研究</li></td></tr>
+                <tr><td><li>多倍長精度複素数演算向けの効率的な手法の検討</li></td></tr>
+                <tr><td><li>複素対称線形方程式向けの反復法の前処理手法に関する研究</li></td></tr>
+
+                <tr><td>　</td></tr>
+
+                <table width="1000">
+                    <tr><td><b>査読付き学術論文誌</b></td></tr>
+                    <TABLE border="1">
+                        <tr>
+                            <td>
+                                <li>
+                                    <u><b>桝井晃基</b></u>, 荻野正雄, “複素対称線形方程式における多倍長精度共役直交共役勾配法の性能評価”,<br>
+                            　        計算工学会論文集, 計算工学会, p. 20180007, 2018．
+                                </li>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <li>
+                                    武居周, 水間健仁, 杉本振一郎, <u><b>桝井晃基</b></u>, 荻野正雄, ”部分領域反復解法に擬似４倍精度を用いたfull-wave電磁界解析,”<br>
+                       　             電子情報通信学会, 電子情報通信学会論文誌C, Vol. J100-C, No. 5, pp. 182-191, May 2017.
+                                </li>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <li>
+                                    <u><b>Koki Masui</b></u>, Masao Ogino, and Lijun Liu, “Multiple-precision Iterative Methods <br>
+                          　          for SolvingComplex SymmetricElectromagnetic Systems”, <br>
+                         　           Numerical Methods for Flows in Lecture Note in Computational Science and Engineering,
+                                    FEF 2017．(accept)　
+                                </li>
+                           </td>
+                        </tr>
+                    </TABLE>
+                                          <tr><td>　</td></tr>
+
+
+
+                    <table width="1000">
+                        <tr><td><b>査読付き国際会議論文</b></td></tr>
+                        <TABLE border="1">
+                            <tr>
+                                <td>
+                                    <li>
+                                        <u><b>Koki Masui</b></u>, Masao Ogino, “Research on the Convergence of Iterative Method Using Mixed Precision Calculation<br>
+                           　             Solving Complex Symmetric Linear Equation”, Compumag2019, Paris, July 2019．(accept)
+                                    </li>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <li>
+                                        Kazuaki Sekiya, Masao Ogino, Lijun Liu, <u><b>Koki Masui</b></u>, ”Efficient Mixed-precision Iterative Methods<br>
+                             　           for High-frequency Electromagnetic Field Analysis”，Compumag2019, Paris，July 2019. (accept)
+                                    </li>
+                                </td>
+                            </tr>
+                        </TABLE>
+                        <tr><td>　</td></tr>
+
+                        <table width="1000">
+                            <tr><td><b>国際会議における発表</b></td></tr>
+                            <TABLE border="1">
+                                <tr>
+                                    <td>
+                                        <li>
+                                            <u><b>Koki Masui</b></u>, Masao Ogino,“Performance evaluation of iterative method with mixed precision calculation<br>
+                             　               in electromagnetic field analysis”, ATAT2017, 国立台湾大学, 2017年3月．<b>（招待講演）</b>
+                                        </li>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <li>
+                                            <u><b>Koki Masui</b></u>, Masao Ogino,“Study on the type of implementation of a mixed-precision iterative method <br>
+                             　               for solving complex symmetric linear systems”，DPMAT2018，名古屋大学東山キャンパス，2017年8月．
+                                        </li>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <li>
+                                            <u><b>Koki Masui</b></u>, Masao Ogino, “Performance evaluation of some iterative methods for electromagnetic field analysis<br>
+                             　               using mixed precision calculation.”, ATAT2018, 国立成功大学, 2018年3月．<b>（招待講演）</b>
+                                        </li>
+                                    </td>
+                                </tr>
+                            </TABLE>
+                            <tr><td>　</td></tr>
+
+                            <table width="1000">
+                                <tr><td><b>国内学会における発表</b></td></tr>
+                                <TABLE border="1">
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                荻野正雄, <u><b>桝井晃基</b></u>,“倍々精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”,<br>
+                               　                 日本機械学会 第28回｢電磁力関連のダイナミクス｣シンポジウム (SEAD28), 慶應義塾大学日吉キャンパス，2016年5月．
+                                            </li>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄,“大規模電磁場解析における反復法への高精度計算の適用”，<br>
+                                 　               日本機械学会 第29回計算力学講演会 (CMD2016)，名古屋大学東山キャンパス，2016年9月．
+                                            </li>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄,“混合精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”,<br>
+                                  　              日本計算工学会 第22回計算工学会講演会 (JSCES2017), ソニックシティ大宮, 2017年6月．
+                                            </li>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄,“電磁界シミュレーションのための混合精度演算反復法の最適実装”，<br>
+                                 　               日本機械学会 第30回計算力学講演会 (CMD2017)，近畿大学東大阪キャンパス，2017年9月．
+                                            </li>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄, “電磁場解析向けの多倍長精度演算を用いた反復法の並列化に関する研究”,<br>
+                                 　               日本計算工学会 第23回計算工学会講演会 (JSCES2018), ウインクあいち, 2018年6月.
+                                            </li>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄, “複素対称線形方程式向けの混合精度演算を用いた反復法の並列化および最適化に関する検討”,<br>
+                                  　              日本機械学会 第31回計算力学講演会 (CMD2018), 徳島大学常三島キャンパス, 2018年11月.
+                                            </li>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄,“倍々精度複素数向けの効率的な計算手法に関する検討”,<br>
+                                  　              日本計算工学会 第24回計算工学会講演会 (JSCES2019), ソニックシティ大宮, 2019年5月．
+                                            </li>
+                                        </td>
+                                    </tr>
+
+                                </TABLE>
+
+                                <br>
+                                <br>
+
+                                <hr width="500">
+                                <a href="index.html">トップ</a>
+                                <a href="about.html">プロフィール</a>
+                                <a href="link.html">リンク集</a>
+                                <br>
+                                <hr width="1000">
+                                <br>
+                                <br>
+
+</div>
+        </div>
+    </center>
 
 </html>
