--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-        <div style="display:inline-block; padding: 10px; margin-bottom: 10px; border: 1px dashed #333333; background-color: #ffffe0;">
+        <div style="display:inline-block; padding: 10px; margin-bottom: 10px; border: 1px dashed #333333; background-color: #E0FFFF;">
 
 
 
