--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
 
 
+
             <table width="1000">
                 <tr>
                     <td>
                         <body>
-                            <h1>　自己紹介　　　                    </h1>
+                            <h1>　自己紹介　　　                 </h1>
                         </body>
                     </td>
                     <td>　</td>
@@ -33,8 +34,9 @@
                     <td>　</td>
                     <td>　</td>
                     <td>　</td>
-                    <td rowspan="10">　<img src="img/github-template.png" width="400" height="300"></td>
+                    <td rowspan="10">　<img src="img/me.png" width="280" height="400"></td>
                 </tr>
+
 
                 <tr><td><li>所属</li></td></tr>
                 <tr><td>　名古屋大学大学院　情報学研究科　情報システム学専攻</td></tr>
@@ -66,7 +68,9 @@
                 <tr><td>2017年4月～　名古屋大学大学院　情報学研究科　情報システム学専攻博士後期課程在学中</td></tr>
             </table>
 
-            <br><br>
+            <br>
+            <hr width="1000">
+            <br>
 
             <table width="1000">
                 <tr>
@@ -84,7 +88,7 @@
                     <td>　</td>
                     <td>　</td>
                     <td>　</td>
-                    <td rowspan="10">　<img src="img/github-template.png" width="400" height="300"></td>
+                    <td rowspan="10">　<img src="img/baseball.JPG" width="300" height="400"></td>
                 </tr>
 
                 <tr><td><li>スポーツ</li></td></tr>
@@ -101,7 +105,7 @@
 
             </table>
 
-
+            <hr width="1000">
             <table width="1000">
                 <tr>
                     <td>
@@ -227,7 +231,7 @@
                                         <td>
                                             <li>
                                                 <u><b>桝井晃基</b></u>, 荻野正雄,“混合精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”,<br>
-                                  　              日本計算工学会 第22回計算工学会講演会 (JSCES2017), ソニックシティ大宮, 2017年6月．
+                                  　              日本計算工学会 第22回計算工学会講演会 (JSCES2017), ソニックシティ(大宮), 2017年6月．
                                             </li>
                                         </td>
                                     </tr>
@@ -243,8 +247,16 @@
                                     <tr>
                                         <td>
                                             <li>
+                                                <u><b>桝井晃基</b></u>, 荻野正雄, “高周波電磁界解析における反復法の収束性に関する検討”,<br>
+                                 　              電気学会 平成30年電気学会全国大会, 九州大学伊都キャンパス, 2018年3月.
+                                            </li>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <li>
                                                 <u><b>桝井晃基</b></u>, 荻野正雄, “電磁場解析向けの多倍長精度演算を用いた反復法の並列化に関する研究”,<br>
-                                 　               日本計算工学会 第23回計算工学会講演会 (JSCES2018), ウインクあいち, 2018年6月.
+          　                                      日本計算工学会 第23回計算工学会講演会 (JSCES2018), ウインクあいち, 2018年6月.
                                             </li>
                                         </td>
                                     </tr>
@@ -260,7 +272,7 @@
                                         <td>
                                             <li>
                                                 <u><b>桝井晃基</b></u>, 荻野正雄,“倍々精度複素数向けの効率的な計算手法に関する検討”,<br>
-                                  　              日本計算工学会 第24回計算工学会講演会 (JSCES2019), ソニックシティ大宮, 2019年5月．
+                                  　              日本計算工学会 第24回計算工学会講演会 (JSCES2019), ソニックシティ(大宮), 2019年5月．
                                             </li>
                                         </td>
                                     </tr>
