--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
             <h1>桝井 晃基(ますい こうき)</h1>
         </body>
 
+       
+        <!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr>
+
+        
+        <td align="center">
+            あなたは
+        <a href="http://www.rays-counter.com/">
+        <img src="http://www.rays-counter.com/d436_f6_022/5cdaace113a46/" alt="アクセスカウンター" border="0"></a>番目の訪問者です</td></tr><tr><td align="center">
+        <img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0">
+        <img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0">
+        <img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table><!--ここまで-->
+
+  
+
+
+
+
+
 
 
 
