--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <td align="center">
             あなたは
         <a href="http://www.rays-counter.com/">
-        <img src="http://www.rays-counter.com/d436_f6_022/5cdaace113a46/" alt="アクセスカウンター" border="0"></a>番目の訪問者です</td></tr><tr><td align="center">
+        <img src="http://www.rays-counter.com/d436_f6_022/5cdaace113a46/" alt="アクセスカウンター" border="0"></a>人目の訪問者です</td></tr><tr><td align="center">
         <img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0">
         <img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0">
         <img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table><!--ここまで-->
