--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
 
                                 <hr width="500">
                                 <a href="index.html">トップ</a>
-                                <a href="about.html">プロフィール</a>
-                                <a href="link.html">リンク集</a>
+                                <a href="about.html">プロフィール(工事中)</a>
+                                <a href="link.html">リンク集(工事中)</a>
                                 <br>
                                 <hr width="1000">
                                 <br>
