--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <td>　</td>
                     <td>　</td>
                     <td>　</td>
-                    <td rowspan="10">　<img src="img/me.png" width="280" height="400"></td>
+                    <td rowspan="10">　<img src="img/me.jpg" width="280" height="400"></td>
                 </tr>
 
 
