--- a/index.html
+++ b/index.html
@@ -146,26 +146,26 @@
                         <tr>
                             <td>
                                 <li>
-                                    <u><b>桝井晃基</b></u>, 荻野正雄, “複素対称線形方程式における多倍長精度共役直交共役勾配法の性能評価”,<br>
-                            　        計算工学会論文集, 計算工学会, p. 20180007, 2018．
+                                    <u><b>桝井晃基</b></u>，荻野正雄，“複素対称線形方程式における多倍長精度共役直交共役勾配法の性能評価”，<br>
+                            　        計算工学会論文集，計算工学会，p. 20180007，2018．
                                 </li>
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <li>
-                                    武居周, 水間健仁, 杉本振一郎, <u><b>桝井晃基</b></u>, 荻野正雄, ”部分領域反復解法に擬似４倍精度を用いたfull-wave電磁界解析,”<br>
-                       　             電子情報通信学会, 電子情報通信学会論文誌C, Vol. J100-C, No. 5, pp. 182-191, May 2017.
+                                    武居周，水間健仁，杉本振一郎，<u><b>桝井晃基</b></u>，荻野正雄，”部分領域反復解法に擬似４倍精度を用いたfull-wave電磁界解析，”<br>
+                       　             電子情報通信学会，電子情報通信学会論文誌C，Vol. J100-C，No. 5，pp. 182-191， May 2017.
                                 </li>
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <li>
-                                    <u><b>Koki Masui</b></u>, Masao Ogino, and Lijun Liu, “Multiple-precision Iterative Methods <br>
-                          　          for SolvingComplex SymmetricElectromagnetic Systems”, <br>
-                         　           Numerical Methods for Flows in Lecture Note in Computational Science and Engineering,
-                                    FEF 2017．(accept)　
+                                    <u><b>Koki Masui</b></u>，Masao Ogino，and Lijun Liu，“Multiple-precision Iterative Methods <br>
+                          　          for SolvingComplex SymmetricElectromagnetic Systems”，<br>
+                         　           Numerical Methods for Flows in Lecture Note in Computational Science and Engineering，
+                                    FEF 2017．(accept)
                                 </li>
                            </td>
                         </tr>
@@ -180,16 +180,16 @@
                             <tr>
                                 <td>
                                     <li>
-                                        <u><b>Koki Masui</b></u>, Masao Ogino, “Research on the Convergence of Iterative Method Using Mixed Precision Calculation<br>
-                           　             Solving Complex Symmetric Linear Equation”, Compumag2019, Paris, July 2019．(accept)
+                                        <u><b>Koki Masui</b></u>，Masao Ogino，“Research on the Convergence of Iterative Method Using Mixed Precision Calculation<br>
+                           　             Solving Complex Symmetric Linear Equation”，Compumag2019，Paris，July 2019．(accept)
                                     </li>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <li>
-                                        Kazuaki Sekiya, Masao Ogino, Lijun Liu, <u><b>Koki Masui</b></u>, ”Efficient Mixed-precision Iterative Methods<br>
-                             　           for High-frequency Electromagnetic Field Analysis”，Compumag2019, Paris，July 2019. (accept)
+                                        Kazuaki Sekiya，Masao Ogino，Lijun Liu，<u><b>Koki Masui</b></u>，”Efficient Mixed-precision Iterative Methods<br>
+                             　           for High-frequency Electromagnetic Field Analysis”，Compumag2019，Paris，July 2019. (accept)
                                     </li>
                                 </td>
                             </tr>
@@ -202,15 +202,15 @@
                                 <tr>
                                     <td>
                                         <li>
-                                            <u><b>Koki Masui</b></u>, Masao Ogino,“Performance evaluation of iterative method with mixed precision calculation<br>
-                             　               in electromagnetic field analysis”, ATAT2017, 国立台湾大学, 2017年3月．<b>（招待講演）</b>
+                                            <u><b>Koki Masui</b></u>，Masao Ogino，Performance evaluation of iterative method with mixed precision calculation<br>
+                             　               in electromagnetic field analysis”，ATAT2017，国立台湾大学，2017年3月．<b>（招待講演）</b>
                                         </li>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <li>
-                                            <u><b>Koki Masui</b></u>, Masao Ogino,“Study on the type of implementation of a mixed-precision iterative method <br>
+                                            <u><b>Koki Masui</b></u>，Masao Ogino，“Study on the type of implementation of a mixed-precision iterative method <br>
                              　               for solving complex symmetric linear systems”，DPMAT2018，名古屋大学東山キャンパス，2017年8月．
                                         </li>
                                     </td>
@@ -218,8 +218,8 @@
                                 <tr>
                                     <td>
                                         <li>
-                                            <u><b>Koki Masui</b></u>, Masao Ogino, “Performance evaluation of some iterative methods for electromagnetic field analysis<br>
-                             　               using mixed precision calculation.”, ATAT2018, 国立成功大学, 2018年3月．<b>（招待講演）</b>
+                                            <u><b>Koki Masui</b></u>，Masao Ogino，“Performance evaluation of some iterative methods for electromagnetic field analysis<br>
+                             　               using mixed precision calculation.”，ATAT2018，国立成功大学，2018年3月．<b>（招待講演）</b>
                                         </li>
                                     </td>
                                 </tr>
@@ -232,15 +232,15 @@
                                     <tr>
                                         <td>
                                             <li>
-                                                荻野正雄, <u><b>桝井晃基</b></u>,“倍々精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”,<br>
-                               　                 日本機械学会 第28回｢電磁力関連のダイナミクス｣シンポジウム (SEAD28), 慶應義塾大学日吉キャンパス，2016年5月．
+                                                荻野正雄，<u><b>桝井晃基</b></u>，“倍々精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”，<br>
+                               　                 日本機械学会 第28回｢電磁力関連のダイナミクス｣シンポジウム (SEAD28)，慶應義塾大学日吉キャンパス，2016年5月．
                                             </li>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄,“大規模電磁場解析における反復法への高精度計算の適用”，<br>
+                                                <u><b>桝井晃基</b></u>，荻野正雄，“大規模電磁場解析における反復法への高精度計算の適用”，<br>
                                  　               日本機械学会 第29回計算力学講演会 (CMD2016)，名古屋大学東山キャンパス，2016年9月．
                                             </li>
                                         </td>
@@ -248,8 +248,8 @@
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄,“混合精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”,<br>
-                                  　              日本計算工学会 第22回計算工学会講演会 (JSCES2017), ソニックシティ(大宮), 2017年6月．
+                                                <u><b>桝井晃基</b></u>，荻野正雄，“混合精度演算を用いた電磁界シミュレーションにおけるCOCG法の収束性改善”，<br>
+                                  　              日本計算工学会 第22回計算工学会講演会 (JSCES2017)，ソニックシティ(大宮)，2017年6月．
                                             </li>
                                         </td>
                                     </tr>
@@ -257,7 +257,7 @@
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄,“電磁界シミュレーションのための混合精度演算反復法の最適実装”，<br>
+                                                <u><b>桝井晃基</b></u>，荻野正雄，“電磁界シミュレーションのための混合精度演算反復法の最適実装”，<br>
                                  　               日本機械学会 第30回計算力学講演会 (CMD2017)，近畿大学東大阪キャンパス，2017年9月．
                                             </li>
                                         </td>
@@ -265,32 +265,32 @@
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄, “高周波電磁界解析における反復法の収束性に関する検討”,<br>
-                                 　              電気学会 平成30年電気学会全国大会, 九州大学伊都キャンパス, 2018年3月.
+                                                <u><b>桝井晃基</b></u>， 荻野正雄，“高周波電磁界解析における反復法の収束性に関する検討”，<br>
+                                 　              電気学会 平成30年電気学会全国大会，九州大学伊都キャンパス，2018年3月.
                                             </li>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄, “電磁場解析向けの多倍長精度演算を用いた反復法の並列化に関する研究”,<br>
-          　                                      日本計算工学会 第23回計算工学会講演会 (JSCES2018), ウインクあいち, 2018年6月.
+                                                <u><b>桝井晃基</b></u>，荻野正雄，“電磁場解析向けの多倍長精度演算を用いた反復法の並列化に関する研究”，<br>
+          　                                      日本計算工学会 第23回計算工学会講演会(JSCES2018)，ウインクあいち，2018年6月.
                                             </li>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄, “複素対称線形方程式向けの混合精度演算を用いた反復法の並列化および最適化に関する検討”,<br>
-                                  　              日本機械学会 第31回計算力学講演会 (CMD2018), 徳島大学常三島キャンパス, 2018年11月.
+                                                <u><b>桝井晃基</b></u>，荻野正雄，“複素対称線形方程式向けの混合精度演算を用いた反復法の並列化および最適化に関する検討”，<br>
+                                  　              日本機械学会 第31回計算力学講演会 (CMD2018)，徳島大学常三島キャンパス，2018年11月.
                                             </li>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
                                             <li>
-                                                <u><b>桝井晃基</b></u>, 荻野正雄,“倍々精度複素数向けの効率的な計算手法に関する検討”,<br>
-                                  　              日本計算工学会 第24回計算工学会講演会 (JSCES2019), ソニックシティ(大宮), 2019年5月．
+                                                <u><b>桝井晃基</b></u>，荻野正雄，“倍々精度複素数向けの効率的な計算手法に関する検討”，<br>
+                                  　              日本計算工学会 第24回計算工学会講演会(JSCES2019)，ソニックシティ(大宮)，2019年5月．
                                             </li>
                                         </td>
                                     </tr>
@@ -301,13 +301,16 @@
                                 <br>
 
                                 <hr width="500">
+                                リンク集<br><br>
                                 <a href="index.html">トップ</a>
-                                <a href="about.html">プロフィール(工事中)</a>
-                                <a href="link.html">リンク集(工事中)</a>
+                                　
+                                <a href="https://www.i.nagoya-u.ac.jp/graduate-school-of-informatics/">名古屋大学　情報学研究科</a>
+                                　
+                                <a href="https://www.hpc.itc.nagoya-u.ac.jp/">片桐研究室</a>
                                 <br>
                                 <hr width="1000">
                                 <br>
-                                <br>
+                              
 
 </div>
         </div>
