--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                         <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                             <li>
                                                 <u><b>Koki Masui</b></u>，Masao Ogino，Performance evaluation of iterative method with mixed precision calculation
-                                                in electromagnetic field analysis”，ATAT2017，国立台湾大学，2017年3月．<b>（招待講演）</b>
+                                                in electromagnetic field analysis”，ATAT2017，国立台湾大学（台北市），2017年3月．<b>（招待講演）</b>
                                             </li>
                                         </div>
                                     </td>
@@ -245,7 +245,7 @@
                                         <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                             <li>
                                                 <u><b>Koki Masui</b></u>，Masao Ogino，“Performance evaluation of some iterative methods for electromagnetic field analysis
-                                                using mixed precision calculation.”，ATAT2018，国立成功大学，2018年3月．<b>（招待講演）</b>
+                                                using mixed precision calculation.”，ATAT2018，国立成功大学（台南市），2018年3月．<b>（招待講演）</b>
                                             </li>
                                         </div>
                                     </td>
