--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
                 <td align="center">
                     あなたは
-                    <a href="http://www.rays-counter.com/">
                         <img src="http://www.rays-counter.com/d436_f6_022/5cdaace113a46/" alt="アクセスカウンター" border="0">
-                    </a>人目の訪問者です
+人目の訪問者です
                 </td>
             </tr>
             <tr>
