--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
                 <tr><td><li>所属</li></td></tr>
-                <tr><td>　名古屋大学大学院　情報学研究科　情報システム学専攻</td></tr>
+                <tr><td>　名古屋大学大学院　情報学研究科　　　　　　　　　<br>　情報システム学専攻　博士後期課程</td></tr>
                 <tr><td><li>所属学会</li></td></tr>
                 <tr><td>　情報処理学会(学生員)</td></tr>
                 <tr><td><li>肩書き</li></td></tr>
@@ -141,7 +141,7 @@
                     </td>
                 </tr>
 
-                <tr><td><b>内容</b></td></tr>
+                <tr><td><b>研究内容</b></td></tr>
                 <tr><td><li>大規模電磁場解析問題における高精度演算を用いた反復法に関する研究</li></td></tr>
                 <tr><td><li>多倍長精度複素数演算向けの効率的な手法の検討</li></td></tr>
                 <tr><td><li>複素対称線形方程式向けの反復法の前処理手法に関する研究</li></td></tr>
@@ -340,20 +340,45 @@
                                 </TABLE>
 
                                 <br>
-                                <br>
 
-                                <hr width="500">
-                                リンク集
-                                <br>
-                                <br>
-                                <a href="index.html">トップ</a>
-                                <td>　</td>
-                                <a href="https://www.i.nagoya-u.ac.jp/graduate-school-of-informatics/">名古屋大学　情報学研究科</a>
-                                <td>　</td>
-                                <a href="https://www.hpc.itc.nagoya-u.ac.jp/">片桐研究室</a>
-                                <br>
-                                <hr width="1000">
-                                <br>
+
+
+
+                                <table width="1000">
+                                    <tr><td><b>その他研究に関する学外活動</b></td></tr>
+                                    <TABLE border="1">
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                        日欧米カナダ共同主催の<a href="http://ihpcss18.it4i.cz/">HPC国際サマースクール</a>に応募・参加
+                                                    </li>
+                                                </div>
+                                            </td>
+                                        </tr>
+
+                                    </TABLE>
+
+
+
+
+
+
+
+                                    <br>
+
+                                    <hr width="500">
+                                    リンク集
+                                    <br>
+                                    <br>
+                                    <a href="index.html">トップ</a>
+                                    <td>　</td>
+                                    <a href="https://www.i.nagoya-u.ac.jp/graduate-school-of-informatics/">名古屋大学　情報学研究科</a>
+                                    <td>　</td>
+                                    <a href="https://www.hpc.itc.nagoya-u.ac.jp/">片桐研究室</a>
+                                    <br>
+                                    <hr width="1000">
+                                    <br>
 
 
 </div>
