--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <tr><td><b>研究内容</b></td></tr>
                 <tr><td><li>大規模電磁場解析問題における高精度演算を用いた反復法に関する研究</li></td></tr>
-                <tr><td><li>多倍長精度複素数演算向けの効率的な手法の検討</li></td></tr>
+                <tr><td><li>多倍長精度複素数演算向けの効率的な手法の検討(並列化・効率化など)</li></td></tr>
                 <tr><td><li>複素対称線形方程式向けの反復法の前処理手法に関する研究</li></td></tr>
 
                 <tr><td>　</td></tr>
@@ -351,7 +351,7 @@
                                             <td table width="900">
                                                 <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                     <li>
-                                                        日欧米カナダ共同主催の<a href="http://ihpcss18.it4i.cz/">HPC国際サマースクール</a>に応募・参加
+                                                        日欧米カナダ共同主催の<a href="http://ihpcss18.it4i.cz/">HPC国際サマースクール(IHPCSS2018)</a>に応募・参加
                                                     </li>
                                                 </div>
                                             </td>
