--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                         <li>
                                             <u><b>Koki Masui</b></u>，Masao Ogino，“Research on the Convergence of Iterative Method Using Mixed Precision Calculation
-                                            Solving Complex Symmetric Linear Equation”，Compumag2019，Paris，July 2019．(accept)
+                                            Solving Complex Symmetric Linear Equation”，Compumag2019，Paris，July 2019．
                                         </li>
                                     </div>
                                 </td>
@@ -208,7 +208,7 @@
                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                         <li>
                                             Kazuaki Sekiya，Masao Ogino，Lijun Liu，<u><b>Koki Masui</b></u>，”Efficient Mixed-precision Iterative Methods
-                                            for High-frequency Electromagnetic Field Analysis”，Compumag2019，Paris，July 2019. (accept)
+                                            for High-frequency Electromagnetic Field Analysis”，Compumag2019，Paris，July 2019. 
                                         </li>
                                     </div>
                                 </td>
@@ -336,7 +336,16 @@
                                             </div>
                                         </td>
                                     </tr>
-
+                                    <tr>
+                                        <td table width="900">
+                                            <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                <li>
+                                                    <u><b>桝井晃基</b></u>，山中脩也，荻野正雄，片桐孝洋，“倍々精度複素数に向けた効率的な手法の精度評価 ”，
+                                                    日本応用数理学会 「行列・固有値問題の解法とその応用」研究部会(SWoPP 2019)，北見市民会館，2019年7月．
+                                                </li>
+                                            </div>
+                                        </td>
+                                    </tr>
                                 </TABLE>
 
                                 <br>
@@ -351,12 +360,20 @@
                                             <td table width="900">
                                                 <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                     <li>
-                                                        日欧米カナダ共同主催の<a href="http://ihpcss18.it4i.cz/">HPC国際サマースクール(IHPCSS2018)</a>に応募・参加
+                                                        日欧米カナダ共同主催の<a href="http://ihpcss18.it4i.cz/">HPC国際サマースクール(IHPCSS2018)</a>に採択・参加
                                                     </li>
                                                 </div>
                                             </td>
                                         </tr>
-
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                       サイエンティフィック・システム研究会(SS研)BoFにて「<a href="https://www.ssken.gr.jp/MAINSITE/event/2018/20181025-bof/index.html">専門家としてのキャリアパス</a>」で若手研究者の話題提供者として発表
+</li>
+                                                </div>
+                                            </td>
+                                        </tr>
                                     </TABLE>
 
 
