--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                     <li>
                                         <u><b>Koki Masui</b></u>，Masao Ogino，and Lijun Liu，“Multiple-precision Iterative Methods
                                         for Solving Complex Symmetric Electromagnetic Systems”，
-                                        Numerical Methods for Flows in Lecture Note in Computational Science and Engineering，FEF 2017．(accept)
+                                        Numerical Methods for Flows in Lecture Note in Computational Science and Engineering，FEF 2017．(in press)
                                     </li>
                                 </div>
                             </td>
@@ -370,7 +370,7 @@
                                                 <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                     <li>
                                                        サイエンティフィック・システム研究会(SS研)BoFにて「<a href="https://www.ssken.gr.jp/MAINSITE/event/2018/20181025-bof/index.html">専門家としてのキャリアパス</a>」で若手研究者の話題提供者として発表
-</li>
+                                                    </li>
                                                 </div>
                                             </td>
                                         </tr>
