--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                     <li>
                                         武居周，水間健仁，杉本振一郎，<u><b>桝井晃基</b></u>，荻野正雄，”部分領域反復解法に擬似４倍精度を用いたfull-wave電磁界解析”，
-                                        電子情報通信学会，電子情報通信学会論文誌C，Vol. J100-C，No. 5，pp. 182-191， May 2017.
+                                        電子情報通信学会，電子情報通信学会論文誌C，Vol. J100-C，No. 5，pp. 182-191, 2017.
 
                                     </li>
                                 </div>
@@ -180,7 +180,17 @@
                                     <li>
                                         <u><b>Koki Masui</b></u>，Masao Ogino，and Lijun Liu，“Multiple-precision Iterative Methods
                                         for Solving Complex Symmetric Electromagnetic Systems”，
-                                        Numerical Methods for Flows in Lecture Note in Computational Science and Engineering，FEF 2017．(in press)
+                                        Numerical Methods for Flows in Lecture Note in Computational Science and Engineering(FEF 2017)．(in press)
+                                    </li>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td table width="900">
+                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                    <li>
+                                        <u><b>Koki Masui</b></u>，Masao Ogino，“Research on the Convergence of Iterative Method Using Mixed Precision Calculation
+                                        Solving Complex Symmetric Linear Equation”，IEEE Trans. Magn., Vol. 56, No. 1, pp. 1-4, 2020.
                                     </li>
                                 </div>
                             </td>
@@ -193,16 +203,6 @@
                     <table width="1000">
                         <tr><td><b>査読付き国際会議論文</b></td></tr>
                         <TABLE border="1">
-                            <tr>
-                                <td table width="900">
-                                    <div style="margin-left: 1.4em; text-indent: -1.4em;">
-                                        <li>
-                                            <u><b>Koki Masui</b></u>，Masao Ogino，“Research on the Convergence of Iterative Method Using Mixed Precision Calculation
-                                            Solving Complex Symmetric Linear Equation”，Compumag2019，Paris，July 2019．
-                                        </li>
-                                    </div>
-                                </td>
-                            </tr>
                             <tr>
                                 <td table width="900">
                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
@@ -310,6 +310,17 @@
                                         <td table width="900">
                                             <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                 <li>
+                                                    <u><b>桝井晃基</b></u>，“複素対称線形方程式における高精度演算を用いた反復法の収束性の性能評価”,
+                                                    第1回大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2018), 原鶴温泉・泰泉閣会議室「筑紫」, 2018年3月.
+                                                </li>
+                                            </div>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td table width="900">
+                                            <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                <li>
                                                     <u><b>桝井晃基</b></u>，荻野正雄，“電磁場解析向けの多倍長精度演算を用いた反復法の並列化に関する研究”，
                                                     日本計算工学会 第23回計算工学会講演会(JSCES2018)，ウインクあいち，2018年6月.
                                                 </li>
@@ -330,6 +341,16 @@
                                         <td table width="900">
                                             <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                 <li>
+                                                    <u><b>桝井晃基</b></u>，“複素対称線形方程式に対する反復法の前処理手法に関する検討”, 
+                                                    第2回大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2019), 宮崎観光ホテルブリリアントホール, 2019年3月.
+                                                </li>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td table width="900">
+                                            <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                <li>
                                                     <u><b>桝井晃基</b></u>，荻野正雄，“倍々精度複素数向けの効率的な計算手法に関する検討”，
                                                     日本計算工学会 第24回計算工学会講演会(JSCES2019)，ソニックシティ(大宮)，2019年5月．
                                                 </li>
@@ -342,6 +363,26 @@
                                                 <li>
                                                     <u><b>桝井晃基</b></u>，山中脩也，荻野正雄，片桐孝洋，“倍々精度複素数に向けた効率的な手法の精度評価 ”，
                                                     日本応用数理学会 「行列・固有値問題の解法とその応用」研究部会(SWoPP 2019)，北見市民会館，2019年7月．
+                                                </li>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td table width="900">
+                                            <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                <li>
+                                                    <u><b>桝井晃基</b></u>，曽我部知広, 片桐孝洋, 荻野正雄,“大規模電磁界解析向けの線形方程式のためのIC分解前処理のフィルインレベルについて”, 
+                                                    情報処理学会　第172回ハイパフォーマンスコンピューティング研究会, 沖縄産業支援センター, 2019年12月.
+                                                </li>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td table width="900">
+                                            <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                <li>
+                                                    <u><b>桝井晃基</b></u>，荻野正雄, 片桐孝洋, “大規模電磁場問題に対する効率的な倍々精度演算を用いた反復法の実装について”, 
+                                                    情報処理学会　第173回ハイパフォーマンスコンピューティング研究会, 北海道立道民活動センター, 2020年3月. 
                                                 </li>
                                             </div>
                                         </td>
