--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                                         <td table width="900">
                                             <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                 <li>
-                                                    <u><b>桝井晃基</b></u>，“複素対称線形方程式における高精度演算を用いた反復法の収束性の性能評価”,
-                                                    第1回大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2018), 原鶴温泉・泰泉閣会議室「筑紫」, 2018年3月.
+                                                    <u><b>桝井晃基</b></u>，“複素対称線形方程式における高精度演算を用いた反復法の収束性の性能評価”，
+                                                    第1回大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2018)，原鶴温泉・泰泉閣会議室「筑紫」，2018年3月．
                                                 </li>
                                             </div>
                                         </td>
@@ -342,7 +342,7 @@
                                             <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                 <li>
                                                     <u><b>桝井晃基</b></u>，“複素対称線形方程式に対する反復法の前処理手法に関する検討”, 
-                                                    第2回大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2019), 宮崎観光ホテルブリリアントホール, 2019年3月.
+                                                    第2回大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2019)，宮崎観光ホテルブリリアントホール，2019年3月．
                                                 </li>
                                             </div>
                                         </td>
@@ -371,8 +371,8 @@
                                         <td table width="900">
                                             <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                 <li>
-                                                    <u><b>桝井晃基</b></u>，曽我部知広, 片桐孝洋, 荻野正雄,“大規模電磁界解析向けの線形方程式のためのIC分解前処理のフィルインレベルについて”, 
-                                                    情報処理学会　第172回ハイパフォーマンスコンピューティング研究会, 沖縄産業支援センター, 2019年12月.
+                                                    <u><b>桝井晃基</b></u>，曽我部知広，片桐孝洋，荻野正雄，“大規模電磁界解析向けの線形方程式のためのIC分解前処理のフィルインレベルについて”, 
+                                                    情報処理学会　第172回ハイパフォーマンスコンピューティング研究会，沖縄産業支援センター，2019年12月．
                                                 </li>
                                             </div>
                                         </td>
@@ -381,8 +381,8 @@
                                         <td table width="900">
                                             <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                 <li>
-                                                    <u><b>桝井晃基</b></u>，荻野正雄, 片桐孝洋, “大規模電磁場問題に対する効率的な倍々精度演算を用いた反復法の実装について”, 
-                                                    情報処理学会　第173回ハイパフォーマンスコンピューティング研究会, 北海道立道民活動センター, 2020年3月. 
+                                                    <u><b>桝井晃基</b></u>，荻野正雄，片桐孝洋，“大規模電磁場問題に対する効率的な倍々精度演算を用いた反復法の実装について”， 
+                                                    情報処理学会　第173回ハイパフォーマンスコンピューティング研究会，北海道立道民活動センター，2020年3月．
                                                 </li>
                                             </div>
                                         </td>
