--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
                 <table width="1000">
                     <tr>
                         <td>
-                            <body>
-                                <h1>　複素数の倍々精度演算ライブラリ　　　                    </h1>
-                            </body>
+
                         </td>
                     </tr>
 
-                    <tr><td><b>研究内容</b></td></tr>
+                    <tr><td><b>開発したライブラリについて</b></td></tr>
                     <tr><td><a href="baibai.h">複素数の倍々精度演算ライブラリ　Ver. 1.0</a></td></tr>
+                    とりあえず暫定版，全ての種類の演算はまだ実装していませんが，普通に使える分には使えるはず
+                    C++からインクルードして使用してください
 
 
 
