--- a/index.html
+++ b/index.html
@@ -148,23 +148,17 @@
 
                 <tr><td>　</td></tr>
 
+                </table>
+ 
+                    <td></td>
 
-                <hr width="1000">
-                <table width="1000">
-                    <tr>
-                        <td>
+                    <table width="1000">
+                <tr><td><b>開発したライブラリについて</b></td></tr>
+                <tr><td><a href="dd.html">複素数の倍々精度演算ライブラリ</a></td></tr>
 
-                        </td>
-                    </tr>
+            </table>
 
-                    <tr><td><b>開発したライブラリについて</b></td></tr>
-                    <tr><td><a href="baibai.h">複素数の倍々精度演算ライブラリ　Ver. 1.0</a></td></tr>
-                    とりあえず暫定版，全ての種類の演算はまだ実装していませんが，普通に使える分には使えるはず
-                    C++からインクルードして使用してください
-
-
-
-
+                    <tr><td>　</td></tr>
 
 
                     <table width="1000">
