--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                         <li>
                                             <u><b>Koki Masui</b></u>，Masao Ogino，and Lijun Liu，“Multiple-precision Iterative Methods
                                             for Solving Complex Symmetric Electromagnetic Systems”，
-                                            Numerical Methods for Flows in Lecture Note in Computational Science and Engineering(FEF 2017)．(in press)
+                                            Lecture Note in Computational Science and Engineering, Numerical Methods for Flows(FEF 2017 Selected Contributions), pp. 321-329, 2020.
                                         </li>
                                     </div>
                                 </td>
