--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 
                 <tr><td><li>所属</li></td></tr>
-                <tr><td>　名古屋大学大学院　情報学研究科　　　　　　　　　<br>　情報システム学専攻　博士後期課程</td></tr>
+                <tr><td>　名古屋大学　情報基盤センター</td></tr>
                 <tr><td><li>所属学会</li></td></tr>
-                <tr><td>　情報処理学会(学生員)</td></tr>
+                <tr><td>　情報処理学会</td></tr>
                 <tr><td><li>肩書き</li></td></tr>
-                <tr><td>　日本学術振興会　特別研究員(DC2)</td></tr>
+                <tr><td>　日本学術振興会　特別研究員(PD)</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
