--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                 <tr><td>2011年3月　　岐阜県立関高等学校卒業</td></tr>
                 <tr><td>2015年3月　　名古屋大学　工学部　電気電子・情報工学科卒業</td></tr>
                 <tr><td>2017年3月　　名古屋大学大学院　情報科学研究科　情報システム学専攻博士前期課程修了</td></tr>
-                <tr><td>2017年4月～　名古屋大学大学院　情報学研究科　情報システム学専攻博士後期課程在学中</td></tr>
+                <tr><td>2020年3月　　名古屋大学大学院　情報学研究科　情報システム学専攻博士後期課程修了</td></tr>
+                <tr><td>2020年4月～　日本学術振興会　特別研究員(PD)</td></tr>
             </table>
 
             <br>
