--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                 <tr><td>　音楽ゲーム　ぷよぷよ・テトリス　その他いろいろ</td></tr>
                 <tr><td><li>クイズ</li></td></tr>
                 <tr><td>　最近になって歴史とかを学ぶ楽しみを覚えた</td></tr>
+                <tr><td><li>プログラミング</li></td></tr>
+                <tr><td>　競プロ頑張ります</td></tr>
+                <tr><td><li>(けん玉)</li></td></tr>
+                <tr><td>　(1級の項目クリアしたので初段目指します)</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
