--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                                 <td table width="900">
                                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                         <li>
-                                                            <a href="xsig.hpcc.jp/2020/">xSIG 2020</a>ヤングプログラム委員
+                                                            <a href="http://xsig.hpcc.jp/2020/">xSIG 2020</a>ヤングプログラム委員
                                                         </li>
                                                     </div>
                                                 </td>
