--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 
                 <tr><td><li>所属</li></td></tr>
-                <tr><td>　名古屋大学　情報基盤センター</td></tr>
+                <tr><td>　大阪大学　情報科学研究科</td></tr>
                 <tr><td><li>所属学会</li></td></tr>
                 <tr><td>　情報処理学会</td></tr>
                 <tr><td><li>肩書き</li></td></tr>
-                <tr><td>　日本学術振興会　特別研究員(PD)</td></tr>
+                <tr><td>　助教　</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
@@ -92,7 +92,10 @@
                 <tr><td>2015年3月　　名古屋大学　工学部　電気電子・情報工学科卒業</td></tr>
                 <tr><td>2017年3月　　名古屋大学大学院　情報科学研究科　情報システム学専攻博士前期課程修了</td></tr>
                 <tr><td>2020年3月　　名古屋大学大学院　情報学研究科　情報システム学専攻博士後期課程修了</td></tr>
-                <tr><td>2020年4月～　日本学術振興会　特別研究員(PD)</td></tr>
+
+                <tr><td>2019年度　日本学術振興会　特別研究員(DC2)</td></tr>
+                <tr><td>2020年4月～9月　日本学術振興会　特別研究員(PD)(資格変更)</td></tr>
+                <tr><td>2020年10月～　大阪大学　助教</td></tr>
             </table>
 
             <br>
