--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
                 </tr>
 
 
-                <tr><td><li>所属</li></td></tr>
-                <tr><td>　大阪大学　情報科学研究科</td></tr>
+                <tr><td><li>所属とか</li></td></tr>
+                <tr><td>　大阪大学　情報科学研究科　助教</td></tr>
                 <tr><td><li>所属学会</li></td></tr>
                 <tr><td>　情報処理学会</td></tr>
-                <tr><td><li>肩書き</li></td></tr>
-                <tr><td>　助教　</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
                 <tr><td>　</td></tr>
@@ -93,7 +91,9 @@
                 <tr><td>2017年3月　　名古屋大学大学院　情報科学研究科　情報システム学専攻博士前期課程修了</td></tr>
                 <tr><td>2020年3月　　名古屋大学大学院　情報学研究科　情報システム学専攻博士後期課程修了</td></tr>
 
-                <tr><td>2019年度　日本学術振興会　特別研究員(DC2)</td></tr>
+                <tr><td>　</td></tr>
+
+                <tr><td>2019年4月～2020年3月　日本学術振興会　特別研究員(DC2)</td></tr>
                 <tr><td>2020年4月～9月　日本学術振興会　特別研究員(PD)(資格変更)</td></tr>
                 <tr><td>2020年10月～　大阪大学　助教</td></tr>
             </table>
