--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                                                 <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                     <li>
                                                         <u><b>桝井晃基</b></u>，山中脩也，荻野正雄，片桐孝洋，“倍々精度複素数に向けた効率的な手法の精度評価 ”，
-                                                        日本応用数理学会 「行列・固有値問題の解法とその応用」研究部会(SWoPP 2019)，北見市民会館，2019年7月．
+                                                        日本応用数理学会 「行列・固有値問題の解法とその応用」研究部会(MEPA, SWoPP 2019)，北見市民会館，2019年7月．
                                                     </li>
                                                 </div>
                                             </td>
@@ -401,6 +401,16 @@
                                                     <li>
                                                         <u><b>桝井晃基</b></u>，荻野正雄，片桐孝洋，“大規模電磁場問題に対する効率的な倍々精度演算を用いた反復法の実装について”，
                                                         情報処理学会　第173回ハイパフォーマンスコンピューティング研究会，北海道立道民活動センター，2020年3月．
+                                                    </li>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                        <u><b>桝井晃基</b></u>，荻野正雄，片桐孝洋，“複素対称線形方程式に対する反復法におけるIC分解前処理の最適実装”，
+                                                        日本応用数理学会　「行列・固有値問題の解法とその応用」研究部会(MEPA, SWoPP 2020)，オンライン開催，2020年7月．
                                                     </li>
                                                 </div>
                                             </td>
