--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td table width="900">
+                                        <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                            <li>
+                                                <u><b>Koki Masui</b></u>，Masao Ogino，Takahiro Katagiri，Fumihiko Ino，”IC(𝒑) Preconditioning with Acceleration Factor for
+                                                High-Frequency Electromagnetic Field Analysis”，Compumag2019，Paris，July 2019.
+                                            </li>
+                                        </div>
+                                    </td>
+                                </tr>
+
                             </TABLE>
                             <tr><td>　</td></tr>
 
@@ -415,6 +426,46 @@
                                                 </div>
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                        <u><b>桝井晃基</b></u>，“大規模電磁場解析における反復法の高精度演算による高速化”，
+                                                        第25回AT研究会オープンアカデミックセッション(ATOS25)，オンライン開催，2020年12月．
+                                                    </li>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                        <u><b>桝井晃基</b></u>，“高周波電磁場問題に対する反復法におけるIC分解前処理のフィルイン手法による収束性の改善”，
+                                                        第4回 大規模電磁界数値解析手法に関する研究シンポジウム(LSCEM2021)，オンライン開催，2021年3月．
+                                                    </li>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                        <u><b>桝井晃基</b></u>，“大規模電磁場問題に対する反復法におけるフィルインと加速係数の性能評価”，
+                                                        情報処理学会 第178回ハイパフォーマンスコンピューティング研究会，オンライン開催，2021年3月．
+                                                    </li>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td table width="900">
+                                                <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                    <li>
+                                                        <u><b>桝井晃基</b></u>，“大規模電磁場解析向け反復法の前処理における最適な加速係数の決定方法”，
+                                                        日本応用数理学会 2021年度年会，オンライン開催，2021年9月．
+                                                    </li>
+                                                </div>
+                                            </td>
+                                        </tr>
                                     </TABLE>
 
                                     <br>
@@ -468,9 +519,9 @@
                                         <br>
                                         <a href="index.html">トップ</a>
                                         <td>　</td>
-                                        <a href="https://www.i.nagoya-u.ac.jp/graduate-school-of-informatics/">名古屋大学　情報学研究科</a>
+                                        <a href="https://www.ist.osaka-u.ac.jp/japanese/">名古屋大学　情報学研究科</a>
                                         <td>　</td>
-                                        <a href="https://www.hpc.itc.nagoya-u.ac.jp/">片桐研究室</a>
+                                        <a href="http://www-hagi.ist.osaka-u.ac.jp/index.html">片桐研究室</a>
                                         <br>
                                         <hr width="1000">
                                         <br>
