--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                         <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                             <li>
                                                 Kazuaki Sekiya，Masao Ogino，Lijun Liu，<u><b>Koki Masui</b></u>，”Efficient Mixed-precision Iterative Methods
-                                                for High-frequency Electromagnetic Field Analysis”，Compumag2019，Paris，July 2019.
+                                                for High-frequency Electromagnetic Field Analysis”，Compumag 2019，Paris，July 2019.
                                             </li>
                                         </div>
                                     </td>
@@ -236,7 +236,7 @@
                                         <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                             <li>
                                                 <u><b>Koki Masui</b></u>，Masao Ogino，Takahiro Katagiri，Fumihiko Ino，”IC(𝒑) Preconditioning with Acceleration Factor for
-                                                High-Frequency Electromagnetic Field Analysis”，Compumag2019，Paris，July 2019.
+                                                High-Frequency Electromagnetic Field Analysis”，HPCAsia 2021，Online，January 2021.
                                             </li>
                                         </div>
                                     </td>
