--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                         </body>
                     </td>
 
-                <tr><td>2008年3月　　岐阜県美濃市立美濃北中学校卒業※　　　　　　　　　　　　　　　　　　　　　　　　　　　※少子化により現在は廃校</td></tr>
                 <tr><td>2011年3月　　岐阜県立関高等学校卒業</td></tr>
                 <tr><td>2015年3月　　名古屋大学　工学部　電気電子・情報工学科卒業</td></tr>
                 <tr><td>2017年3月　　名古屋大学大学院　情報科学研究科　情報システム学専攻博士前期課程修了</td></tr>
@@ -521,7 +520,7 @@
                                         <td>　</td>
                                         <a href="https://www.ist.osaka-u.ac.jp/japanese/">名古屋大学　情報学研究科</a>
                                         <td>　</td>
-                                        <a href="http://www-hagi.ist.osaka-u.ac.jp/index.html">片桐研究室</a>
+                                        <a href="http://www-hagi.ist.osaka-u.ac.jp/index.html">伊野研究室</a>
                                         <br>
                                         <hr width="1000">
                                         <br>
