--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                         <br>
                                         <a href="index.html">トップ</a>
                                         <td>　</td>
-                                        <a href="https://www.ist.osaka-u.ac.jp/japanese/">名古屋大学　情報学研究科</a>
+                                        <a href="https://www.ist.osaka-u.ac.jp/japanese/">大阪大学　情報科学研究科</a>
                                         <td>　</td>
                                         <a href="http://www-hagi.ist.osaka-u.ac.jp/index.html">伊野研究室</a>
                                         <br>
